# RadHDL

./: README.md
common/hdl/src/: radhdl_axi_pkg.vhd  radhdl_axis_pkg.vhd  radhdl_spi_pkg.vhd
common/hdl/verification/: axi4_record_synth_smoke.vhd  axilite_record_synth_smoke.vhd  axis_record_synth_smoke.vhd  spi_record_synth_smoke.vhd
debug/: .gitignore
debug/radila/hdl/radila/: README.md  package_radila_ip.tcl  rad_debug_hub_bd.tcl  raddebughub.vhd  raddebughub_axi.vhd  radila_axi_top.vhd  radila_core.vhd
debug/radila/software/bridges/: README.md
debug/radila/software/bridges/linux/: CMakeLists.txt  README.md  radila_linux_bridge.c
debug/radila/software/bridges/mcu/rp2040_rp2350/: CMakeLists.txt  README.md  radila_pico_bridge.c
debug/radila/software/pc-host/: README.md
debug/radila/software/pc-host/source/radfpga-debug-hub/: CMakeLists.txt  README.md  main.cpp  radfpga_debug_hubd.cpp
dsp/: README.md
dsp/hdl/raddsp/register_maps/: raddsp_axis_am_iq_demodulator.map.json  raddsp_axis_am_iq_modulator.map.json  raddsp_axis_radfft_ddr.map.json
dsp/hdl/raddsp/scripts/: build_raddsp_encrypted.tcl  build_raddsp_plain.tcl  create_raddsp_xci.tcl  encrypt_raddsp.tcl  package_raddsp_ip.tcl  raddsp_files.tcl
dsp/hdl/testbenches/: iqcal_capture_pkg.vhd  tb_cordic_atan2.plots.json  tb_cordic_atan2.vhd  tb_raddsp_axis_am_iq.plots.json  tb_raddsp_axis_am_iq.vhd  tb_raddsp_axis_fingerprint.plots.json  tb_raddsp_axis_fingerprint.vhd  tb_raddsp_axis_fingerprint_audio.vhd  tb_raddsp_axis_float_fixed.plots.json  tb_raddsp_axis_float_fixed.vhd  tb_raddsp_axis_radfft.plots.json  tb_raddsp_axis_radfft.vhd  tb_raddsp_axis_radfft_ddr.vhd  tb_raddsp_axis_radfft_ddr_xcorr_1024.vhd  tb_raddsp_axis_smoke.plots.json  tb_raddsp_axis_smoke.vhd  tb_raddsp_sqrt_u32.plots.json  tb_raddsp_sqrt_u32.vhd  tb_raddsp_xilinx_dsp48_wide_mul.vhd  tb_zc_chirp_frame_detector_iqcal.plots.json  tb_zc_chirp_frame_detector_iqcal.vhd
hdl/: README.md  radhdl_library.tcl
hdl/radhdl/src/: debug.vhd  debug_context.vhd  dsp.vhd  dsp_comms.vhd  dsp_context.vhd  dsp_detection.vhd  dsp_filter.vhd  dsp_matrix.vhd  dsp_transform.vhd  interfaces.vhd  interfaces_axi.vhd  interfaces_context.vhd  interfaces_i2c.vhd  interfaces_i2s.vhd  interfaces_regbank.vhd  interfaces_smi.vhd  interfaces_spi.vhd  interfaces_uart.vhd  radhdl_context.vhd
projects/dsp_timing_smoke/src/: radhdl_dsp_axi_smoke_top.vhd
projects/examples/fpiga_audio_hat/: README.md  build_gowin.sh  fpiga_audio_hat.radproject.json
projects/fft_dma_hpc/src/: radhdl_fft_dma_hpc_top.vhd
projects/fft_streaming_bench_k26/src/: tb_xfft_1024_latency.vhd
projects/radfft_1024_util/src/: radhdl_radfft_1024_util_top.vhd
projects/radfft_ddr_axi_loopback/src/: raddsp_axis_radfft_ddr_bd.vhd
projects/synth_reports/: README.md  core_matrix.json  run_core_synth_reports.py
scripts/: generate_radhdl_api.py  generate_radhdl_library.py  radhdl_docgen.py
sim/xpm/: xpm_memory_models.vhd
(+164 files in other folders)
